[gd_scene load_steps=10 format=3 uid="uid://dwg33hcpla7gh"]

[ext_resource type="FontFile" uid="uid://du3421x6ajkbl" path="res://assets/fonts/digitalix.ttf" id="1"]
[ext_resource type="Script" path="res://src/championship/ChampionshipSplash.gd" id="1_kyc6a"]
[ext_resource type="Texture2D" uid="uid://dd0mv4pesrss8" path="res://assets/images/RegionalCup.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c58ksuetrit2l" path="res://assets/images/WorldCup.png" id="4"]
[ext_resource type="Texture2D" uid="uid://5231ghv0cssl" path="res://assets/images/NationalCup.png" id="5"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="3"]
resource_name = "3_s_exit"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_championship"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x1wc1"]
_data = {
"3_s_exit": SubResource("3")
}

[node name="ChampionshipSplash" type="ColorRect"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_kyc6a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpaceTop" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Type" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = SubResource("1")
text = "REGIONAL"

[node name="RegionalCup" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("2")
stretch_mode = 5

[node name="NationalCup" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("5")
stretch_mode = 5

[node name="WorldCup" type="TextureRect" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
texture = ExtResource("4")
stretch_mode = 5

[node name="Championship" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = SubResource("2")
text = "CHAMPIONSHIP"

[node name="SpaceBottom" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x1wc1")
}
